# ai_financial_advisor

./: .gitignore  Agentic_Usecase.md  Alex_AI_2.0.md  Alex_Fixes.md  Alex_Master_Implementation_Plan.md  Alex_Trading_Floor_2.0.md  Alex_chat_intelligence.md  Alex_report.md  DM_apply.md  Ophelia.md  P0_report.md  README.md  RIA.md  RL_Update.md  Startup.md  usecases.md
.cursor/rules/: test-after-every-change.mdc
.github/workflows/: ci.yml  deploy_agents.yml  deploy_researcher.yml  deploy_trading.yml  health_check.yml  pr_check.yml
backend/agents/: cost_monitor.py  db_helper.py  ops_agent.py  package.sh  planner.py  portfolio_research.py  reporter.py  scheduler.py  tagger.py
backend/researcher/: Dockerfile  bedrock_cost.py  context_service.py  debater_handoff.py  debater_registry.py  deploy.sh  latency_tracker.py  mcp_servers.py  prompt_archive.py  prompts.py  prompts_archive.py  pyproject.toml  query_router.py  query_trace.py  requirements-eval.txt  server.py  server_archive.py  tools.py  tools_archive.py  tools_archive_1.py
backend/researcher/eval/: __init__.py  benchmark_queries.py  db.py  ragas_runner.py
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts
scripts/: TEST_PLAYBOOK.md  alex_control.sh  aurora_warmup.py  benchmark_latency.sh  deploy_all.sh  deploy_ingest.sh  deploy_trading.sh  destroy_all.sh  health_check.sh  migrate_vectors.py  rag_maintenance.py  start_guide4.sh  start_session.sh  stop_guide4.sh  stop_session.sh  test_p0.sh  test_pgvector_rag.py  test_research_mode_latency.sh  test_trading.sh  toggle_eventbridge.sh
(+143 files in other folders)
