[project]
name = "alex-researcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "openai-agents==0.0.11",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "yfinance>=0.2.40",
]